<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:srcCompat="@drawable/my_cover"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardpf1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="#906C8C51"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1">

        <TextView
            android:layout_marginTop="18dp"
            android:layout_marginStart="120dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/imagePf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pf_name" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:cardCornerRadius="50dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="126dp">

        <ImageView
            android:id="@+id/imagePf"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/my_profile" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#dadada"
        app:layout_constraintEnd_toEndOf="@+id/imageView1"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/imageView1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/year1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/b_year1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/yea2"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/b_year2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/year1"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Missing Constraints" />

            <TextView
                android:id="@+id/yea3"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/b_year3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/yea2"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Missing Constraints" />

            <TextView
                android:id="@+id/yea4"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/b_year4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/yea3"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Missing Constraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/semester1"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <TextView
        android:id="@+id/text_semester1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:text="@string/semester1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/text_semester1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textpf1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/java_programing1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="14dp" />

            <TextView
                android:id="@+id/textpf2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="Data Structure"
                app:layout_constraintBottom_toBottomOf="@+id/textpf1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textpf1"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textpf3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="Operating System"
                app:layout_constraintTop_toBottomOf="@+id/textpf1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/textpf4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="MIS"
                app:layout_constraintBottom_toBottomOf="@+id/textpf3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textpf3"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textpf5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="@string/mathematics"
                app:layout_constraintTop_toBottomOf="@+id/textpf3"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/textpf6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/web_development_1"
                app:layout_constraintBottom_toBottomOf="@+id/textpf5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textpf5"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/semester2"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <TextView
        android:id="@+id/text_semester2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/semester2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/text_semester2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textpf_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_app_dev_1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="14dp" />

            <TextView
                android:id="@+id/textpf_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/web_development_2"
                app:layout_constraintBottom_toBottomOf="@+id/textpf_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textpf_1"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textpf_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Database 1"
                android:layout_marginTop="9dp"
                app:layout_constraintTop_toBottomOf="@+id/textpf_1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="9dp" />

            <TextView
                android:id="@+id/textpf_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="Python"
                app:layout_constraintBottom_toBottomOf="@+id/textpf_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textpf_3"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textpf_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english_language"
                android:layout_marginTop="9dp"
                app:layout_constraintTop_toBottomOf="@+id/textpf_3"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="9dp" />

            <TextView
                android:id="@+id/textpf_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/network_engineering"
                app:layout_constraintBottom_toBottomOf="@+id/textpf_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textpf_5"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>